tests/e2e/mutation_any_invalid3.story
a = []
b = a[0]
c = b substring start:"2"
